<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/home_box"
        android:orientation="vertical"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/my_red_left_ly"
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:background="@color/hongbao_color"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/my_red_left_amount_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/how_yuan"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="19sp"
                     />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="红  包"
                    android:textColor="@color/white"
                    android:gravity="center"

                    />


            </LinearLayout>

            <TextView
                android:id="@+id/my_red_code_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_toRightOf ="@+id/my_red_left_ly"

                android:gravity="left|center"
                android:singleLine="true"
                android:text="@string/duihuan_num"
                android:textColor="@color/red"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/my_red_use_time_or_state_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_toRightOf ="@+id/my_red_left_ly"
                android:layout_below="@+id/my_red_code_tv"
                android:gravity="left|center"

                android:text="加载中"
                android:textColor="@color/red"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/my_red_use_address_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/my_red_use_time_or_state_tv"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_toRightOf ="@+id/my_red_left_ly"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/use_address"
                android:textColor="@color/title_fontcolor"
                android:visibility="visible"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/my_red_explanation_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/my_red_use_address_tv"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_toRightOf ="@+id/my_red_left_ly"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/my_red_remark"
                android:textColor="@color/title_fontcolor"
                android:visibility="visible"
                android:textSize="15sp" />


        </RelativeLayout>
    </LinearLayout>

</LinearLayout>